globus-gass-transfer (8.8-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Fix some Doxygen issues
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Mon, 22 Sep 2014 15:47:59 -0400

globus-gass-transfer (8.7-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:30 -0400

globus-gass-transfer (8.6-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-gass-transfer (8.6-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gass-transfer (8.6-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:46 -0400

globus-gass-transfer (8.4-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:32 -0400

globus-gass-transfer (8.3-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:58 -0400

globus-gass-transfer (8.3-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:43 -0500

globus-gass-transfer (8.2-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 14:38:18 -0500

globus-gass-transfer (8.1-1+gt6.@distro@) @distro@; urgency=low

  * Packaging Fixes

 -- Globus Toolkit <support@globus.org>  Thu, 13 Feb 2014 19:10:34 -0500

globus-gass-transfer (8.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 08:52:47 -0500

globus-gass-transfer (7.2-2) unstable; urgency=low
