@@ -1,6 +1,6 @@
 Name: globus-gass-transfer
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_gass_transfer-8.8.tar.gz
+Source: http://toolkit.globus.org/ftppub/gt6/packages/globus_gass_transfer-8.9.tar.gz
 
 
 Upstream-Authors: The Globus Alliance - http://www.globus.org/
